--- a/app/globals.css
+++ b/app/globals.css
@@ -15,3 +15,11 @@ body{
     color: black;
   }
 }
+
+.unset-country-code-flags{
+  width: 100% !important;
+  border: 0 !important;
+  padding: 0 !important;
+  flex-grow: 1;
+  align-items: center;
+}
