create roomies and rooms listing cards

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,11 @@
-
+:root{
+  --swiper-pagination-color: #3A86FF;
+  /* --swiper-theme-color: #3A86FF; */
+  --swiper-pagination-bullet-inactive-color: #fff;
+  --swiper-pagination-bullet-inactive-opacity: 1;
+  --swiper-pagination-bullet-horizontal-gap: 2px;
+  --swiper-pagination-bullet-size: 6px;
+}
 html{
   font-size: 10px;
   background: white;
@@ -23,4 +30,8 @@ body{
   padding: 0 !important;
   flex-grow: 1;
   align-items: center;
+}
+
+.swiper-button-next::after, .swiper-button-prev::after {
+    content: "" !important;
 }
