school/occupation input update, show error fields to user with message, use native date input for dob, gender input to select

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,30 +1,30 @@
-:root{
-  --swiper-pagination-color: #3A86FF;
+:root {
+  --swiper-pagination-color: #3a86ff;
   /* --swiper-theme-color: #3A86FF; */
   --swiper-pagination-bullet-inactive-color: #fff;
   --swiper-pagination-bullet-inactive-opacity: 1;
   --swiper-pagination-bullet-horizontal-gap: 2px;
   --swiper-pagination-bullet-size: 6px;
 }
-html{
+html {
   font-size: 10px;
   background: white;
 }
 
-body{
+body {
   /* overflow: hidden; */
   background: white;
   color: white;
 }
 
-@media (prefers-color-scheme: dark){
-  html body{
+@media (prefers-color-scheme: dark) {
+  html body {
     background-color: white;
     color: black;
   }
 }
 
-.unset-country-code-flags{
+.unset-country-code-flags {
   width: 100% !important;
   border: 0 !important;
   padding: 0 !important;
@@ -32,11 +32,12 @@ body{
   align-items: center;
 }
 
-.swiper-button-next::after, .swiper-button-prev::after {
-    content: "" !important;
+.swiper-button-next::after,
+.swiper-button-prev::after {
+  content: "" !important;
 }
 
-.ReactFlagsSelect-module_disabledBtn__3A4GF{
+.ReactFlagsSelect-module_disabledBtn__3A4GF {
   background-color: transparent !important;
   cursor: not-allowed !important;
 }
@@ -46,3 +47,6 @@ input:checked ~ .custom-toggle-dot {
   background-color: #48bb78;
 }
 
+input::-webkit-calendar-picker-indicator {
+  opacity: 0;
+}
