--- a/app/globals.css
+++ b/app/globals.css
@@ -20,7 +20,7 @@ body {
 @media (prefers-color-scheme: dark) {
   html body {
     background-color: white;
-    color: black;
+    color: #222222;
   }
 }
 
