--- a/app/globals.css
+++ b/app/globals.css
@@ -34,7 +34,7 @@ body {
 
 .swiper-button-next::after,
 .swiper-button-prev::after {
-  content: "" !important;
+  content: "''" !important;
 }
 
 .ReactFlagsSelect-module_disabledBtn__3A4GF {
