--- a/app/globals.css
+++ b/app/globals.css
@@ -48,7 +48,11 @@ input:checked ~ .custom-toggle-dot {
   transform: translateX(100%);
   background-color: #48bb78;
 }
-
+.blog-image {
+  width: 100%;
+  height: auto;
+  border-radius: 12px;
+}
 /* input::-webkit-calendar-picker-indicator {
 } */
 ::selection {
